Update UTF-8 & index.html

--- a/lab/eulab/addresses.htm
+++ b/lab/eulab/addresses.htm
@@ -2,8 +2,9 @@
 
 <!-- Copyright © Laboratorio Eudemonia -->
 
-
 <HEAD>
+
+<meta charset="utf-8">
 
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
