--- a/lab/eulab/attiv.htm
+++ b/lab/eulab/attiv.htm
@@ -1,14 +1,16 @@
 <HTML>
 
-<!-- Copyright © Laboratorio Eudemonia -->
+<!-- Copyright ¬© Laboratorio Eudemonia -->
 
 <HEAD>
+
+<meta charset="utf-8">
 
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
 
-<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ‡, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
+<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ√†, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
 
 <TITLE>Laboratorio Eudemonia</TITLE>
 
@@ -35,7 +37,7 @@
 
 <font face="arial" size="3" color="white"><b>
 
-Le attivit‡ del Laboratorio Eudemonia sono condotte nei seguenti Dipartimenti:
+Le attivit√† del Laboratorio Eudemonia sono condotte nei seguenti Dipartimenti:
 
 <br><br>
 
@@ -43,11 +45,11 @@ Le attivit‡ del Laboratorio Eudemonia sono condotte nei seguenti Dipartimenti:
 
 <br><br>
 
-In questo stesso dipartimento Ë in atto una campagna, con relativa offerta di appositi strumenti riflessivi, per un <a class="lightlink" href="../giorev/index.htm">Giornalismo Evoluto</a>.
+In questo stesso dipartimento √® in atto una campagna, con relativa offerta di appositi strumenti riflessivi, per un <a class="lightlink" href="../giorev/index.htm">Giornalismo Evoluto</a>.
 
 <br><br>
 
-<a class="lightlink" href="../change/index.htm">Dipartimento per il Giusto Mutamento</a>, per individuare le necessarie trasformazioni di cui abbisogna la nostra societ‡.
+<a class="lightlink" href="../change/index.htm">Dipartimento per il Giusto Mutamento</a>, per individuare le necessarie trasformazioni di cui abbisogna la nostra societ√†.
 
 <br><br>
 
@@ -59,7 +61,7 @@ Dipartimento per il Pianeta Terra, con due innovative proposte: <i><a class="lig
 
 <br><br>
 
-Dipartimento per una <i><a class="lightlink" href="../ars/index.htm">Armonica Rotazione Sociale</a></i>, con una proposta, dai pi˘ definita ineludibile, per una netta evoluzione della comune concezione di Pubblico Impiego:
+Dipartimento per una <i><a class="lightlink" href="../ars/index.htm">Armonica Rotazione Sociale</a></i>, con una proposta, dai pi√π definita ineludibile, per una netta evoluzione della comune concezione di Pubblico Impiego:
 
 <br><br>
 
@@ -71,7 +73,7 @@ Dipartimento per una <i><a class="lightlink" href="../ars/index.htm">Armonica Ro
 
 <br><br>
 
-Lo <a class="lightlink" href="../wholeness/index.htm">Wholeness Center</a>, un luogo dove incontrarsi per lavorare insieme ad una evoluzione dell'umanit‡.
+Lo <a class="lightlink" href="../wholeness/index.htm">Wholeness Center</a>, un luogo dove incontrarsi per lavorare insieme ad una evoluzione dell'umanit√†.
 
 <br><br>
 
