--- a/lab/eulab/eulab_en.htm
+++ b/lab/eulab/eulab_en.htm
@@ -1,14 +1,16 @@
 <HTML>
 
-<!-- Copyright © Eudaemony Laboratory      -->
+<!-- Copyright Â© Eudaemony Laboratory      -->
 
 <HEAD>
+
+<meta charset="utf-8">
 
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
 
-<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, società, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
+<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societÃ , mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
 
 <TITLE>Eudaemony Laboratory</TITLE>
 
