--- a/lab/eulab/intro_it.htm
+++ b/lab/eulab/intro_it.htm
@@ -1,14 +1,16 @@
 <HTML>
 
-<!-- Author: Nilo D'Antonio © Laboratorio Eudemonia       -->
+<!-- Author: Nilo D'Antonio ¬© Laboratorio Eudemonia       -->
 <!-- Date:   25/04/96                                     -->
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
-<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ‡, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
+<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ√†, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
 
 <TITLE>Laboratorio Eudemonia</TITLE>
 
@@ -35,15 +37,15 @@
 
 <font face="arial" size="3" color="white"><b>
 
-Il Laboratorio Eudemonia conduce un vasto e variegato ventaglio di attivit‡ che spaziano da quelle favorenti la crescita personale dell'individuo, lo sviluppo della sua personalit‡, a quelle squisitamente rivolte alla ricerca ed alla messa a punto di nuove soluzioni ed opportunit‡ sociali.
+Il Laboratorio Eudemonia conduce un vasto e variegato ventaglio di attivit√† che spaziano da quelle favorenti la crescita personale dell'individuo, lo sviluppo della sua personalit√†, a quelle squisitamente rivolte alla ricerca ed alla messa a punto di nuove soluzioni ed opportunit√† sociali.
 
 <br><br>
 
-Queste ultime attivit‡ si addentrano negli ‡mbiti pi˘ disparati della vita umana e della realt‡ pi˘ in generale, partendo dalla sfera etica, morale e giungendo a quella ambientale, economica e politica, coinvolgendo il tema religioso e quello cosmologico, ontologico, cercando coraggiosamente, pur coi pochi mezzi di cui il Laboratorio dispone, soluzioni perfino a problemi di portata globale e di carattere epocale. 
+Queste ultime attivit√† si addentrano negli √†mbiti pi√π disparati della vita umana e della realt√† pi√π in generale, partendo dalla sfera etica, morale e giungendo a quella ambientale, economica e politica, coinvolgendo il tema religioso e quello cosmologico, ontologico, cercando coraggiosamente, pur coi pochi mezzi di cui il Laboratorio dispone, soluzioni perfino a problemi di portata globale e di carattere epocale. 
 
 <br><br>
 
-Il metodo seguÏto Ë infatti proprio quello di un approccio globale, altrimenti detto olistico, che presuppone la necessit‡ di acquisire dapprima una visione quanto pi˘ ampia possibile, nello spazio e nel tempo, della situazione in esame, cercando di scorgerne perfino le interazioni pi˘ sottili con altri fenomeni, e successivamente cerca di ricorrere a conoscenze, strumenti e risorse di ogni tipo e scienza per risolvere quel particolare problema o mettere a frutto quella particolare opportunit‡, col fine ultimo di migliorare sensibilmente e costantemente, per ciÚ che gli compete ed Ë in suo potere, la qualit‡ della vita umana, in ‡mbito personale come in quello sociale.
+Il metodo segu√¨to √® infatti proprio quello di un approccio globale, altrimenti detto olistico, che presuppone la necessit√† di acquisire dapprima una visione quanto pi√π ampia possibile, nello spazio e nel tempo, della situazione in esame, cercando di scorgerne perfino le interazioni pi√π sottili con altri fenomeni, e successivamente cerca di ricorrere a conoscenze, strumenti e risorse di ogni tipo e scienza per risolvere quel particolare problema o mettere a frutto quella particolare opportunit√†, col fine ultimo di migliorare sensibilmente e costantemente, per ci√≤ che gli compete ed √® in suo potere, la qualit√† della vita umana, in √†mbito personale come in quello sociale.
 
 </b></font>
 
