--- a/lab/eulab/legal_it.htm
+++ b/lab/eulab/legal_it.htm
@@ -5,6 +5,8 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Condizioni d'uso del Laboratorio Eudemonia">
@@ -44,7 +46,7 @@ dei servizi, od altro prodotto ed offerto dal<img src="blank.gif"> <font color="
 
 <i>
 
-Gentilmente: prima di accedere ai siti Internet del Laboratorio Eudemonia vogliate prendere atto di, ed accettare, quanto qui sotto scritto. In caso contrario vi preghiamo di non accedervi affatto e di distruggere l'eventuale materiale che avete gi‡ acquisito.
+Gentilmente: prima di accedere ai siti Internet del Laboratorio Eudemonia vogliate prendere atto di, ed accettare, quanto qui sotto scritto. In caso contrario vi preghiamo di non accedervi affatto e di distruggere l'eventuale materiale che avete gi√† acquisito.
 
 <br><br>
 
@@ -52,27 +54,27 @@ Gentilmente: prima di accedere ai siti Internet del Laboratorio Eudemonia voglia
 
 <span class="marks">
 
-<li>Il materiale fornito all'interno di questo Laboratorio Ë offerto, ove non altrimenti espressamente specificato con apposita licenza, per un esclusivo uso privato, non commerciale nË pubblico. Esso non puÚ essere riprodotto nemmeno in parte senza l'espressa autorizzazione della dirigenza del Laboratorio o dei rispettivi autori. Tutti i diritti sono moralmente e legittimamente riservati.
+<li>Il materiale fornito all'interno di questo Laboratorio √® offerto, ove non altrimenti espressamente specificato con apposita licenza, per un esclusivo uso privato, non commerciale n√® pubblico. Esso non pu√≤ essere riprodotto nemmeno in parte senza l'espressa autorizzazione della dirigenza del Laboratorio o dei rispettivi autori. Tutti i diritti sono moralmente e legittimamente riservati.
 
 </span>
 
 <br><br>
 
-<li>Il materiale Ë in ogni caso offerto nelle condizioni in cui si trova, senza alcuna garanzia di esattezza o validit‡.
+<li>Il materiale √® in ogni caso offerto nelle condizioni in cui si trova, senza alcuna garanzia di esattezza o validit√†.
 
 <br><br>
 
-<li>Il Visitatore del Laboratorio si assume ogni responsabilit‡ sull'uso e sui risultati dell'uso che far‡ delle tecniche, delle guide, dei manuali, degli scritti e qualsiasi altro materiale contenuto o servizio offerto od attivit‡ svolta all'interno del Laboratorio. In ogni caso, coloro che si iscrivono ed utilizzano i servizi offerti e partecipano alle attivit‡ presentate in queste pagine possono farlo solo a proprio personale rischio e pericolo, liberando la gestione da qualsiasi obbligo, onere o peso, passato, presente e futuro, di qualsiasi genere e per qualsiasi motivo. 
+<li>Il Visitatore del Laboratorio si assume ogni responsabilit√† sull'uso e sui risultati dell'uso che far√† delle tecniche, delle guide, dei manuali, degli scritti e qualsiasi altro materiale contenuto o servizio offerto od attivit√† svolta all'interno del Laboratorio. In ogni caso, coloro che si iscrivono ed utilizzano i servizi offerti e partecipano alle attivit√† presentate in queste pagine possono farlo solo a proprio personale rischio e pericolo, liberando la gestione da qualsiasi obbligo, onere o peso, passato, presente e futuro, di qualsiasi genere e per qualsiasi motivo. 
 
 <br><br>
 
-<li>Gli indirizzi e.mail ed altri eventuali dati ed informazioni fornite al Laboratorio rimarranno naturalmente riservati e ad esclusivo uso delle finalit‡ dichiarate e palesi, in ottemperanza non solo a confuse e mutevoli leggi umane del nostro tempo quanto ad universali ed eterni principi etici. 
+<li>Gli indirizzi e.mail ed altri eventuali dati ed informazioni fornite al Laboratorio rimarranno naturalmente riservati e ad esclusivo uso delle finalit√† dichiarate e palesi, in ottemperanza non solo a confuse e mutevoli leggi umane del nostro tempo quanto ad universali ed eterni principi etici. 
 
 <br><br>
 
 <span class="marks">
 
-<li>Le denominazioni: "Laboratorio Eudemonia", "Eudaemony Laboratory", "Il Calendario della Terra", "The Earth Calendar", "La Celebrazione del Nostro Territorio", "The Celebration of our Land", ed i relativi loghi, sono servicemark o trademark del Laboratorio stesso o dell'autore dei corrispondenti lavori, e come tali Ë espressamente richiesto di astenersi dall'utilizzarli per scopi diversi dal riferimento a queste stesse pagine, servizi o prodotti, mai disgiunti dai relativi link.
+<li>Le denominazioni: "Laboratorio Eudemonia", "Eudaemony Laboratory", "Il Calendario della Terra", "The Earth Calendar", "La Celebrazione del Nostro Territorio", "The Celebration of our Land", ed i relativi loghi, sono servicemark o trademark del Laboratorio stesso o dell'autore dei corrispondenti lavori, e come tali √® espressamente richiesto di astenersi dall'utilizzarli per scopi diversi dal riferimento a queste stesse pagine, servizi o prodotti, mai disgiunti dai relativi link.
 
 </span>
 
