--- a/lab/eulab/status_en.htm
+++ b/lab/eulab/status_en.htm
@@ -1,14 +1,16 @@
 <HTML>
 
-<!-- Copyright © Laboratorio Eudemonia -->
+<!-- Copyright ¬© Laboratorio Eudemonia -->
 
 <HEAD>
+
+<meta charset="utf-8">
 
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
 
-<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ‡, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
+<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ√†, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
 
 <TITLE>Laboratorio Eudemonia</TITLE>
 
@@ -38,15 +40,15 @@ STATUS
 
 <br><br><br>
 
-Il Laboratorio Eudemonia Ë una attivit‡ indipendente ed autofinanziata. Non si tratta di una associazione nË di un'attivit‡ professionale, quanto meno in senso classico. All'interno dell'attuale, piuttosto deteriorato, sistema sociale Ë in effetti quasi impossibile per chi cerca l'effettiva soluzione dei problemi, e non invece il modo di convivere con essi e da essi trarre lucro o ragione di esistere, inserirsi in una categoria esistente o semplicemente qualificare la propria posizione.
+Il Laboratorio Eudemonia √® una attivit√† indipendente ed autofinanziata. Non si tratta di una associazione n√® di un'attivit√† professionale, quanto meno in senso classico. All'interno dell'attuale, piuttosto deteriorato, sistema sociale √® in effetti quasi impossibile per chi cerca l'effettiva soluzione dei problemi, e non invece il modo di convivere con essi e da essi trarre lucro o ragione di esistere, inserirsi in una categoria esistente o semplicemente qualificare la propria posizione.
 
 <br><br>
 
-La nostra Ë una attivit‡ scelta e svolta volontariamente, dalla quale non possiamo non augurarci di trarre in futuro anche personali soddisfazioni, non foss'altro per la gran mole di lavoro svolto, ma che non possiamo certo ricondurre all'interno del tradizionale "professionismo" ed altrettanto tradizionale "volontariato", per i numerosi e gravi limiti e manchevolezze da cui entrambi sono afflitti e che contribuiscono a mantenere la societ‡ nello stato in cui si trova.
+La nostra √® una attivit√† scelta e svolta volontariamente, dalla quale non possiamo non augurarci di trarre in futuro anche personali soddisfazioni, non foss'altro per la gran mole di lavoro svolto, ma che non possiamo certo ricondurre all'interno del tradizionale "professionismo" ed altrettanto tradizionale "volontariato", per i numerosi e gravi limiti e manchevolezze da cui entrambi sono afflitti e che contribuiscono a mantenere la societ√† nello stato in cui si trova.
 
 <br><br>
 
-Abbiamo scelto e svolgiamo con passione questo lavoro per una esigenza profonda del nostro animo di cercare di migliorare per davvero questa societ‡ cosÏ malridotta, in cui noi stessi per primi viviamo male, e ci adoperiamo quotidianamente ed a tempo pieno, con solerzia e dedizione. Ma non possiamo limitarci e racchiuderci dentro quelle stesse caselle e categorie, e modelli di pensiero, di comportamento, di organizzazione, di vita, che ancor oggi tengono avvinta l'intera societ‡ umana.
+Abbiamo scelto e svolgiamo con passione questo lavoro per una esigenza profonda del nostro animo di cercare di migliorare per davvero questa societ√† cos√¨ malridotta, in cui noi stessi per primi viviamo male, e ci adoperiamo quotidianamente ed a tempo pieno, con solerzia e dedizione. Ma non possiamo limitarci e racchiuderci dentro quelle stesse caselle e categorie, e modelli di pensiero, di comportamento, di organizzazione, di vita, che ancor oggi tengono avvinta l'intera societ√† umana.
 
 </b></font>
 
