--- a/lab/eulab/status_it.htm
+++ b/lab/eulab/status_it.htm
@@ -1,14 +1,16 @@
 <HTML>
 
-<!-- Copyright © Laboratorio Eudemonia -->
+<!-- Copyright ¬© Laboratorio Eudemonia -->
 
 <HEAD>
+
+<meta charset="utf-8">
 
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
 
-<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ‡, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
+<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ√†, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
 
 <TITLE>Laboratorio Eudemonia</TITLE>
 
@@ -38,19 +40,19 @@ STATUS
 
 <br><br><br>
 
-Il Laboratorio Eudemonia Ë un laboratorio artigiano, una attivit‡ indipendente ed autofinanziata. Non si tratta di una associazione nË di un'attivit‡ professionale, quanto meno in senso classico. All'interno dell'attuale, piuttosto deteriorato, sistema sociale Ë in effetti quasi impossibile per chi cerca l'effettiva soluzione dei problemi, e non invece il modo di convivere con essi e da essi trarre ragione di esistere o propriamente lucro, inserirsi in una categoria esistente o semplicemente qualificare la propria posizione.
+Il Laboratorio Eudemonia √® un laboratorio artigiano, una attivit√† indipendente ed autofinanziata. Non si tratta di una associazione n√® di un'attivit√† professionale, quanto meno in senso classico. All'interno dell'attuale, piuttosto deteriorato, sistema sociale √® in effetti quasi impossibile per chi cerca l'effettiva soluzione dei problemi, e non invece il modo di convivere con essi e da essi trarre ragione di esistere o propriamente lucro, inserirsi in una categoria esistente o semplicemente qualificare la propria posizione.
 
 <br><br>
 
-La nostra Ë una attivit‡ scelta e svolta volontariamente, senza minimamente badare al fatto che essa ci possa portare o meno simpatie, e quindi finanziamenti, o benefici personali in tempo breve od addirittura mai. Per questo motivo, pur augurandoci per il futuro di riscuotere consensi e di trarre anche personali soddisfazioni, non foss'altro per la gran mole di lavoro svolto, non possiamo certo ricondurla all'interno del tradizionale "volontariato" o dell'altrettanto tradizionale "professionismo".
+La nostra √® una attivit√† scelta e svolta volontariamente, senza minimamente badare al fatto che essa ci possa portare o meno simpatie, e quindi finanziamenti, o benefici personali in tempo breve od addirittura mai. Per questo motivo, pur augurandoci per il futuro di riscuotere consensi e di trarre anche personali soddisfazioni, non foss'altro per la gran mole di lavoro svolto, non possiamo certo ricondurla all'interno del tradizionale "volontariato" o dell'altrettanto tradizionale "professionismo".
 
 <br><br>
 
-Abbiamo scelto e svolgiamo con passione questo lavoro per una esigenza profonda del nostro animo di cercare di migliorare per davvero questa societ‡ cosÏ malridotta, in cui noi stessi per primi viviamo male, e ci adoperiamo quotidianamente ed a tempo pieno, con solerzia e dedizione. Ma non possiamo limitarci e racchiuderci dentro quelle stesse caselle e categorie, e modelli di pensiero, di comportamento, di organizzazione, di vita, che, per i numerosi e gravi limiti e manchevolezze da cui sono afflitti, contribuiscono a mantenere la societ‡ nello stato in cui si trova.
+Abbiamo scelto e svolgiamo con passione questo lavoro per una esigenza profonda del nostro animo di cercare di migliorare per davvero questa societ√† cos√¨ malridotta, in cui noi stessi per primi viviamo male, e ci adoperiamo quotidianamente ed a tempo pieno, con solerzia e dedizione. Ma non possiamo limitarci e racchiuderci dentro quelle stesse caselle e categorie, e modelli di pensiero, di comportamento, di organizzazione, di vita, che, per i numerosi e gravi limiti e manchevolezze da cui sono afflitti, contribuiscono a mantenere la societ√† nello stato in cui si trova.
 
 <br><br>
 
-Proprio a questo scopo, allo scopo di fornire la societ‡ di nuovi modi di intervento civico, abbiamo di recente presentato la teoria in favore di un <a class="lightlink" href="../mercato/index.htm">Mercato delle Innovazioni Sociali</a>, senza l'istituzione del quale non possiamo ancora godere, dopo oltre vent'anni di lavoro, di un corretto modo per presentare i nostri prodotti intellettuali: <a class="lightlink" href="../bottega/index.htm">Alla Buona Sorte</a>.
+Proprio a questo scopo, allo scopo di fornire la societ√† di nuovi modi di intervento civico, abbiamo di recente presentato la teoria in favore di un <a class="lightlink" href="../mercato/index.htm">Mercato delle Innovazioni Sociali</a>, senza l'istituzione del quale non possiamo ancora godere, dopo oltre vent'anni di lavoro, di un corretto modo per presentare i nostri prodotti intellettuali: <a class="lightlink" href="../bottega/index.htm">Alla Buona Sorte</a>.
 
 </b></font>
 
