--- a/lab/eulab/visione.htm
+++ b/lab/eulab/visione.htm
@@ -1,14 +1,16 @@
 <HTML>
 
-<!-- Copyright © Laboratorio Eudemonia -->
+<!-- Copyright ¬© Laboratorio Eudemonia -->
 
 <HEAD>
+
+<meta charset="utf-8">
 
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
 
-<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ‡, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
+<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ√†, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
 
 <TITLE>Laboratorio Eudemonia</TITLE>
 
@@ -39,39 +41,39 @@ UNA AMPIA VISIONE
 
 <br><br><br>
 
-CiÚ che viene a volte chiamato <i>futurismo</i>, <i>nuova era</i>, <i>nuova onda</i>, <i>progressismo</i>, Ë una autentica costante temporale. Quale che sia l'epoca in cui si stia vivendo, si tratta sempre di:
+Ci√≤ che viene a volte chiamato <i>futurismo</i>, <i>nuova era</i>, <i>nuova onda</i>, <i>progressismo</i>, √® una autentica costante temporale. Quale che sia l'epoca in cui si stia vivendo, si tratta sempre di:
 
 <br><br>
 
-<li>analizzare con profonda obiettivit‡ il proprio rapporto con il passato, discernendo quanto vi Ë di perenne ed universale validit‡ da ciÚ che invece Ë ormai solo vuota tradizione.
+<li>analizzare con profonda obiettivit√† il proprio rapporto con il passato, discernendo quanto vi √® di perenne ed universale validit√† da ci√≤ che invece √® ormai solo vuota tradizione.
 
 <br><br>
 
-<li>vivere con gioiosa, felice, ma anche premurosa ed umile attenzione quel magico momento di eterna transizione che Ë il presente.
+<li>vivere con gioiosa, felice, ma anche premurosa ed umile attenzione quel magico momento di eterna transizione che √® il presente.
 
 <br><br>
 
-<li>guardare avanti fiduciosi verso il futuro, immaginando e quindi iniziando coraggiosamente a costruire una realt‡ che sia decisamente migliore di quella presente.
+<li>guardare avanti fiduciosi verso il futuro, immaginando e quindi iniziando coraggiosamente a costruire una realt√† che sia decisamente migliore di quella presente.
 
 <br><br>
 
-Pur sapendo che ciÚ che ieri Ë stato dai pi˘ avversato domani dagli stessi verr‡ reso intoccabile ...
+Pur sapendo che ci√≤ che ieri √® stato dai pi√π avversato domani dagli stessi verr√† reso intoccabile ...
 
 <br><br><br>
 
-La nostra consapevolezza, le nostre conoscenze, oggi, si stanno espandendo fino a pensare di raggiungere l'essenza pi˘ profonda della materia ed il complessivo significato del Cosmo, spaziando cosÏ per l'intero segmento di realt‡ che va dal Micro al MacroCosmo.
+La nostra consapevolezza, le nostre conoscenze, oggi, si stanno espandendo fino a pensare di raggiungere l'essenza pi√π profonda della materia ed il complessivo significato del Cosmo, spaziando cos√¨ per l'intero segmento di realt√† che va dal Micro al MacroCosmo.
 
 <br><br>
 
-Forse senza nemmeno rendercene conto, stiamo vivendo un momento grandioso, poichË questo nuovo sapere potrebbe trasformare l'esistenza umana facendole compiere un forte balzo in avanti, da una prima fase della sua storia, che Ë stata quasi necessariamente caratterizzata da ignoranza e superstizione, povert‡ e guerra, violenza e sofferenza, ad una nuova fase spontaneamente fondata su scienza e ragione, abbondanza e pace, gentilezza e benessere.
+Forse senza nemmeno rendercene conto, stiamo vivendo un momento grandioso, poich√® questo nuovo sapere potrebbe trasformare l'esistenza umana facendole compiere un forte balzo in avanti, da una prima fase della sua storia, che √® stata quasi necessariamente caratterizzata da ignoranza e superstizione, povert√† e guerra, violenza e sofferenza, ad una nuova fase spontaneamente fondata su scienza e ragione, abbondanza e pace, gentilezza e benessere.
 
 <br><br>
 
-PerchË venga davvero raggiunto questo obiettivo, perÚ, occorrer‡ che gli esseri umani si impegnino a fondo: con grande obiettivit‡, rinunciando a quelle idee e quegli usi del passato che ancor oggi ci conducono verso mali a non finire, con grande lungimiranza, mettendo a frutto le grandi opportunit‡ del presente. Grazie alla visione accurata e globale che i mass media ci forniscono, non possiamo non riconoscere come fame, ignoranza e guerra siano, oggi, solo conseguenza e frutto di comportamenti tradizionali che si ripetono all'infinito, per cieca abitudine e scarsa creativit‡. Per contro, grazie alla tecnologia, gi‡ molti di noi dispongono di poteri incredibili che appena pochi anni fa nemmeno i pi˘ grandi monarchi sognavano di possedere. 
+Perch√® venga davvero raggiunto questo obiettivo, per√≤, occorrer√† che gli esseri umani si impegnino a fondo: con grande obiettivit√†, rinunciando a quelle idee e quegli usi del passato che ancor oggi ci conducono verso mali a non finire, con grande lungimiranza, mettendo a frutto le grandi opportunit√† del presente. Grazie alla visione accurata e globale che i mass media ci forniscono, non possiamo non riconoscere come fame, ignoranza e guerra siano, oggi, solo conseguenza e frutto di comportamenti tradizionali che si ripetono all'infinito, per cieca abitudine e scarsa creativit√†. Per contro, grazie alla tecnologia, gi√† molti di noi dispongono di poteri incredibili che appena pochi anni fa nemmeno i pi√π grandi monarchi sognavano di possedere. 
 
 <br><br><br>
 
-Una grande responsabilit‡ Ë dunque nelle nostre mani in tutti i campi dell'umano intervento, dall'economia alla religione, dal governo all'arte. L'apporto di ognuno, nel male o nel bene, nella fissazione o nell'innovazione, nell'indifferenza o nell'azione, potr‡ essere determinante.
+Una grande responsabilit√† √® dunque nelle nostre mani in tutti i campi dell'umano intervento, dall'economia alla religione, dal governo all'arte. L'apporto di ognuno, nel male o nel bene, nella fissazione o nell'innovazione, nell'indifferenza o nell'azione, potr√† essere determinante.
 
 <br><br>
 
