--- a/lab/index.html
+++ b/lab/index.html
@@ -20,36 +20,46 @@
 
 <CENTER><TABLE WIDTH="100%" HEIGHT="96%"><TR><TD ALIGN="CENTER" VALIGN="MIDDLE">
 
-<a href="mailto:social@gmx.tw"><IMG SRC="dan.gif" border="0"></a>
+<font face="arial" size="7" color="navy"><b>
 
-<br>
+<a class="asimple" href="repita/index.htm">
 
-<font face="verdana" size="2" color="navy">
+THERE IS NO DEMOCRACY, NO REPUBLIC,<br>
+WITHOUT A PUBLIC JOBS BANK
 
-<b><i>GLOBAL RESEARCHES, PUBLISHING AND CONSULTING FOR COMMON PROFIT</i></b>
+</a>
+
+</b></font>
+
+<br><br><br><br>
+
+<font face="arial" size="5" color="navy"><b>
+
+Let the competent take their turn <i>pro tempore</i> in every public office, high or low.
+
+<br><br>
+
+What counts is not so much who governs, but the revolving circle that surrounds them.
+
+<br><br><br><br>
+
+<font face="arial" size="6" color="navy"><b><i>
+
+<a class="asimple" href="hl_it.htm">Danilo D'Antonio</a>
+
+</i></b></font>
 
 </font>
 
-<hr width="700pt" size="2" color="#ca0014"><br>
-
-<table width="40%"><tr>
-<td align="center" valign="middle">
-<a href="hl_it.htm" title="English Edition"><img src="us.gif" border="0" width="22pt" alt="English Edition"></a></td>
-
-<td align="center" valign="middle"><a href="hl_it.htm"><img src="es.gif" border="0" width="22pt" alt="Ediccion Española"></a></td>
-<td align="center" valign="middle"><a href="hl_it.htm"><img src="fr.gif" border="0" width="22pt" alt="Edition Francais"></a></td>
-
-<td align="center" valign="middle">
-<a href="hl_it.htm" title="Edizione Italiana"><img src="it.gif" border="0" width="22pt" alt="Edizione Italiana"></a>
 </td></tr></table>
 
 </TD></TR></TABLE></CENTER>
 
 <center>
 
-<font face="verdana" size="1" color="#8f8f8f">
+<font face="verdana" size="2" color="#8f8f8f">
 
-<a class="simple_grey" href="index.htm">HyperLinker</a> is a trademark <a class="simple_grey" href="eulab/legal_us.htm">owned</a> by the <a class="simple_grey" href="eulab/index.htm">Eudaemony Laboratory</a>
+Copyright every year by the <a class="simple_grey" href="eulab/index.htm" target="eulab">Eudaemony Laboratory</a>
 
 </font>
 
