--- a/lab/eulab/eudemonia.htm
+++ b/lab/eulab/eudemonia.htm
@@ -1,15 +1,16 @@
 <HTML>
 
-<!-- Copyright © Laboratorio Eudemonia -->
-
+<!-- Copyright ¬© Laboratorio Eudemonia -->
 
 <HEAD>
+
+<meta charset="utf-8">
 
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
 
-<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ‡, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
+<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ√†, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
 
 <TITLE>Laboratorio Eudemonia</TITLE>
 
@@ -40,23 +41,23 @@ EUDEMONIA
 
 <br>
 
-<font size="1">(cosÏ come conosciuta ed interpretata dal nostro Laboratorio)</font>
+<font size="1">(cos√¨ come conosciuta ed interpretata dal nostro Laboratorio)</font>
 
 <br><br><br>
 
-Il vocabolario la assimila alla parola felicit‡ intesa non come qualcosa di momentaneo, fugace, ma come una dimensione all'interno della quale l'essere umano puÚ muoversi e compiere tutto il percorso della sua vita.
+Il vocabolario la assimila alla parola felicit√† intesa non come qualcosa di momentaneo, fugace, ma come una dimensione all'interno della quale l'essere umano pu√≤ muoversi e compiere tutto il percorso della sua vita.
 
 <br><br>
 
-Eudemonologia Ë la scienza che studia le leggi della natura cosÏ che l'essere umano, vivendo coerentemente con esse, possa rimanere in tale dimensione positiva.
+Eudemonologia √® la scienza che studia le leggi della natura cos√¨ che l'essere umano, vivendo coerentemente con esse, possa rimanere in tale dimensione positiva.
 
 <br><br>
 
-L'etimologia della parola Ë il greco Eudaimon, composto da Eu (bene) e Daimon (genio, sorte). Vuol dire quindi: che ha un genio propizio, felice, fortunato.
+L'etimologia della parola √® il greco Eudaimon, composto da Eu (bene) e Daimon (genio, sorte). Vuol dire quindi: che ha un genio propizio, felice, fortunato.
 
 <br><br>
 
-In una antica simbologia il quadrato racchiuso in un cerchio Ë l'essere umano prigioniero del Mondo. Ma ella/egli ha una grande possibilit‡: superare la piccola, angusta mente che si costruisce negli anni e coltivare l'espansione della propria coscienza che ai livelli pi˘ elevati Ë illimitata, comprende e racchiude in sÈ l'intero Universo.
+In una antica simbologia il quadrato racchiuso in un cerchio √® l'essere umano prigioniero del Mondo. Ma ella/egli ha una grande possibilit√†: superare la piccola, angusta mente che si costruisce negli anni e coltivare l'espansione della propria coscienza che ai livelli pi√π elevati √® illimitata, comprende e racchiude in s√© l'intero Universo.
 
 </b></font>
 
