--- a/lab/eulab/eulab_1.htm
+++ b/lab/eulab/eulab_1.htm
@@ -2,6 +2,12 @@
 <html>
 <body>
 
+<head>
+
+<meta charset="utf-8">
+
+</head>
+
 <center><table width="100%" height="100%" cellpadding="48pt" cellspacing="48pt"><tr><td>
 
 Prime presenze in rete del Laboratorio Eudemonia
