--- a/lab/eulab/eulab_es.htm
+++ b/lab/eulab/eulab_es.htm
@@ -1,14 +1,16 @@
 <HTML>
 
-<!-- Copyright © Laboratorio Eudemonia       -->
+<!-- Copyright ¬© Laboratorio Eudemonia       -->
 
 <HEAD>
+
+<meta charset="utf-8">
 
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
 
-<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ‡, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
+<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ√†, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
 
 <TITLE>Laboratorio Eudemonia</TITLE>
 
@@ -30,7 +32,7 @@
 
 <center><table width="90%"><tr><td align="center">
 
-<a class="lightlink" href="eudemonia.htm"><IMG SRC="eulogo.gif" border="0" alt="Eudemonia: la felicit‡ come guida"></a>
+<a class="lightlink" href="eudemonia.htm"><IMG SRC="eulogo.gif" border="0" alt="Eudemonia: la felicit√† come guida"></a>
 
 <BR><BR>
 
@@ -41,11 +43,11 @@
 <font face="arial" size="-2" color="white"><b>
 Al servizio dell'Individuo,
 <br>
-della Societ‡ e del Tutto,
+della Societ√† e del Tutto,
 <br>
-fin dal <a class="white_no_line" href="../tec/index.htm">24</a> nella realt‡ materiale
+fin dal <a class="white_no_line" href="../tec/index.htm">24</a> nella realt√† materiale
 <br>
-e dal <a class="white_no_line" href="../tec/index.htm">27</a> anche nella realt‡ digitale.
+e dal <a class="white_no_line" href="../tec/index.htm">27</a> anche nella realt√† digitale.
 </b></font>
 
 <br><br><br>
@@ -57,7 +59,7 @@ e dal <a class="white_no_line" href="../tec/index.htm">27</a> anche nella realt‡
 <br><br>
 
 <a class="lightlink" href="visione.htm">_La visione_</a> | 
-<a class="lightlink" href="attiv.htm">_Le attivit‡_</a> | 
+<a class="lightlink" href="attiv.htm">_Le attivit√†_</a> | 
 <a class="lightlink" href="status_it.htm">_Lo status_</a> | 
 <a class="lightlink" href="noi.htm">_Chi siamo_</a>
 
