--- a/lab/eulab/hyperlinker.htm
+++ b/lab/eulab/hyperlinker.htm
@@ -4,11 +4,13 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="hyperlinker_style.css" type="text/css">
 
 <meta name="description" content="HyperLinker.com, HyperLinker.net, HyperLinker.org, hyperlinker, Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
 
-<meta name="keywords" content="HyperLinker.com, HyperLinker.net, HyperLinker.org, hyperlinker, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, società, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, Equo Impiego Pubblico">
+<meta name="keywords" content="HyperLinker.com, HyperLinker.net, HyperLinker.org, hyperlinker, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societÃ , mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, Equo Impiego Pubblico">
 
 <TITLE>Dan HyperLinker</TITLE>
 
