--- a/lab/eulab/legal_us.htm
+++ b/lab/eulab/legal_us.htm
@@ -5,6 +5,8 @@
 
 <HEAD>
 
+<meta charset="utf-8">
+
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Condizioni d'uso del Laboratorio Eudemonia">
