--- a/lab/eulab/meetings.htm
+++ b/lab/eulab/meetings.htm
@@ -1,14 +1,16 @@
 <HTML>
 
-<!-- Copyright © Laboratorio Eudemonia -->
+<!-- Copyright ¬© Laboratorio Eudemonia -->
 
 <HEAD>
+
+<meta charset="utf-8">
 
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
 
-<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ‡, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
+<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ√†, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
 
 <TITLE>Laboratorio Eudemonia</TITLE>
 
@@ -40,23 +42,23 @@ INCONTRI COL LABORATORIO EUDEMONIA
 
 <br><br><br>
 
-Viviamo un tempo in cui Ë necessario rivedere tutte le nostre espressioni alla luce delle nuove consapevolezze che ci derivano da un mondo profondamente e velocemente mutato. Il vedere come le nostre attivit‡, un tempo inoffensive, condotte massicciamente oggi divengono spesso controproducenti e dannose, ci conduce alla necessit‡ di riconsiderare tutto quello che facciamo cercando nuovi modi per farlo.
+Viviamo un tempo in cui √® necessario rivedere tutte le nostre espressioni alla luce delle nuove consapevolezze che ci derivano da un mondo profondamente e velocemente mutato. Il vedere come le nostre attivit√†, un tempo inoffensive, condotte massicciamente oggi divengono spesso controproducenti e dannose, ci conduce alla necessit√† di riconsiderare tutto quello che facciamo cercando nuovi modi per farlo.
 
 <br><br>
 
-Se un tempo era necessario spostarsi fisicamente per comunicare idee, informazioni, opinioni, oggi non solo non Ë pi˘ necessario ma nemmeno auspicabile, in certi casi nemmeno accettabile, che le persone spostino per centinaia o migliaia di chilometri le loro pesanti masse fisiche per scambiarsi oggetti impalpabili che possono essere trasmessi per via telematica con estrema efficacia, alla velocit‡ della luce senza trasporto alcuno di materia.
+Se un tempo era necessario spostarsi fisicamente per comunicare idee, informazioni, opinioni, oggi non solo non √® pi√π necessario ma nemmeno auspicabile, in certi casi nemmeno accettabile, che le persone spostino per centinaia o migliaia di chilometri le loro pesanti masse fisiche per scambiarsi oggetti impalpabili che possono essere trasmessi per via telematica con estrema efficacia, alla velocit√† della luce senza trasporto alcuno di materia.
 
 <br><br>
 
-Ci riferiamo ai numerosi meeting, convegni, seminari, incontri, alle assemblee, nazionali ed internazionali, che quotidianamente ci ostiniamo per pura inerzia, per mera forza d'abitudine, a condurre nella realt‡ materiale con un notevole dispendio di risorse e generazione d'inquinamento.
+Ci riferiamo ai numerosi meeting, convegni, seminari, incontri, alle assemblee, nazionali ed internazionali, che quotidianamente ci ostiniamo per pura inerzia, per mera forza d'abitudine, a condurre nella realt√† materiale con un notevole dispendio di risorse e generazione d'inquinamento.
 
 <br><br>
 
-Ben sappiamo che la presenza fisica ed emotiva, umana nonchÈ scenica, del relatore, in special modo quando si tratta di comunicare idee, intuizioni, percezioni, sensazioni non facilmente dimostrabili, puÚ risultare determinante per il successo del meeting. Tuttavia il non aver voluto limitarci, finora, nella nostra crescita demografica ed economica ci impone oggi degli inevitabili sacrifici.
+Ben sappiamo che la presenza fisica ed emotiva, umana nonch√© scenica, del relatore, in special modo quando si tratta di comunicare idee, intuizioni, percezioni, sensazioni non facilmente dimostrabili, pu√≤ risultare determinante per il successo del meeting. Tuttavia il non aver voluto limitarci, finora, nella nostra crescita demografica ed economica ci impone oggi degli inevitabili sacrifici.
 
 <br><br>
 
-Altri facciano ciÚ che vogliono. Il Laboratorio Eudemonia, coerentemente con le sue teorie, soprattutto in ottemperanza a ciÚ che il nostro mondo oggi richiede, sceglie una via diversa da quella tradizionale per diffondere le proprie idee, proposte ed osservazioni critiche. Invitiamo chi fosse interessato ai frutti del nostro lavoro a stampare il materiale presente sui nostri siti dedicati ad un <a class="line" href="../change/index.htm">Giusto Mutamento</a> e ad utilizzarlo per pubbliche letture e discussioni da tenere con amici e cooperatori locali.
+Altri facciano ci√≤ che vogliono. Il Laboratorio Eudemonia, coerentemente con le sue teorie, soprattutto in ottemperanza a ci√≤ che il nostro mondo oggi richiede, sceglie una via diversa da quella tradizionale per diffondere le proprie idee, proposte ed osservazioni critiche. Invitiamo chi fosse interessato ai frutti del nostro lavoro a stampare il materiale presente sui nostri siti dedicati ad un <a class="line" href="../change/index.htm">Giusto Mutamento</a> e ad utilizzarlo per pubbliche letture e discussioni da tenere con amici e cooperatori locali.
 
 <br><br>
 
@@ -66,7 +68,7 @@ Le domande e questioni che sorgeranno durante tali incontri, comunicate per via 
 
 <br><br><br>
 
-<font size="1">Gentilmente: stampa ed utilizzo del materiale presente sui nostri siti siano limitati ad un uso interno, quindi stampa con stampanti domestiche e diffusione in ristretti ambiti locali. Per usi pi˘ ampi, cosÏ come per ogni dubbio dovesse sorgere, gradite contattarci.</font>
+<font size="1">Gentilmente: stampa ed utilizzo del materiale presente sui nostri siti siano limitati ad un uso interno, quindi stampa con stampanti domestiche e diffusione in ristretti ambiti locali. Per usi pi√π ampi, cos√¨ come per ogni dubbio dovesse sorgere, gradite contattarci.</font>
 
 -->
 
