--- a/lab/eulab/noi.htm
+++ b/lab/eulab/noi.htm
@@ -1,14 +1,16 @@
 <HTML>
 
-<!-- Copyright © Laboratorio Eudemonia -->
+<!-- Copyright ¬© Laboratorio Eudemonia -->
 
 <HEAD>
+
+<meta charset="utf-8">
 
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
 
-<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ‡, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
+<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societ√†, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
 
 <TITLE>Laboratorio Eudemonia</TITLE>
 
@@ -36,7 +38,7 @@
 
 <font face="arial" size="3" color="white"><b>
 
-Il Laboratorio Eudemonia Ë un insieme di attivit‡ artigianali condotte da una sola persona:
+Il Laboratorio Eudemonia √® un insieme di attivit√† artigianali condotte da una sola persona:
 
 <br><br>
 
@@ -73,7 +75,7 @@ document.write('Danilo D' + '&acute;' + 'Antonio' + '</a></font>');
 
 <div align="justify">
 
-Ricercatore nel campo delle tecniche di benessere, del corpo e della mente, dell'individuo e della societ‡, si Ë impegnato, oltre che nello sviluppo di strumenti di crescita personale, anche nella ricerca di nuove forme di organizzazione sociale.
+Ricercatore nel campo delle tecniche di benessere, del corpo e della mente, dell'individuo e della societ√†, si √® impegnato, oltre che nello sviluppo di strumenti di crescita personale, anche nella ricerca di nuove forme di organizzazione sociale.
 
 <br><br>
 
