--- a/lab/eulab/storia.htm
+++ b/lab/eulab/storia.htm
@@ -1,14 +1,16 @@
 <HTML>
 
-<!-- Copyright © Laboratorio Eudemonia -->
+<!-- Copyright Â© Laboratorio Eudemonia -->
 
 <HEAD>
+
+<meta charset="utf-8">
 
 <link rel=stylesheet href="eulab_style1.css" type="text/css">
 
 <meta name="description" content="Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
 
-<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, società, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
+<meta name="keywords" content="filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, societÃ , mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, ">
 
 <TITLE>Laboratorio Eudemonia</TITLE>
 
@@ -38,7 +40,7 @@ STORIA
 
 <br><br><br>
 
-Per quanto riguarda la sua storia, il Laboratorio Eudemonia è troppo impegnato nel realizzare i fatti che ne faranno parte: per ora è sia prematuro sia non abbiamo tempo di raccontarla.
+Per quanto riguarda la sua storia, il Laboratorio Eudemonia Ã¨ troppo impegnato nel realizzare i fatti che ne faranno parte: per ora Ã¨ sia prematuro sia non abbiamo tempo di raccontarla.
 
 </b></font>
 
